--- a/src/web/index.html
+++ b/src/web/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline';" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>Electron React TypeScript</title>
+    <title>Minecraft Server Manager</title>
 </head>
 
 <body>
