--- a/src/console/index.html
+++ b/src/console/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Roboto Mono', monospace;
+            box-sizing: border-box;
         }
         #root {
             width: 100vw;
@@ -17,6 +18,7 @@
             background-color: #000;
             color: #fff;
             overflow-wrap: break-word;
+            overflow-y: scroll;
         }
     </style>
 </head>
